tests/negative/gold/abstract8_test.gold
tests/negative/abstract8_test.toit:4:12: error: Abstract members can't have bodies
  abstract foo:
           ^~~
Compilation failed.
